修改登录页鼠标移上去的问题以及旋转木马旋转过快的问题

--- a/survey/index.html
+++ b/survey/index.html
@@ -51,25 +51,25 @@
 					<h3>7大优势</h3>
 					<p>易调查平台实力强劲</p>
 					<div id="da-vinci-carousel" class="da-vinci-carousel">
-						<a href="images/382px-Leonardo_self.jpg" rel='lightbox' title="Leonardo Da Vinci">
+						<a href="#" rel='lightbox' title="Leonardo Da Vinci">
 							<img class="cloudcarousel img1" src="images/cloud01.jpg" width="200" height="330" alt="" />
 						</a>  
-						<a href="images/382px-Leonardo_self.jpg" rel='lightbox' title="Leonardo Da Vinci">
+						<a href="#" rel='lightbox' title="Leonardo Da Vinci">
 							<img class="cloudcarousel img2" src="images/cloud02.jpg" width="200" height="330" alt="" />
 						</a> 
-						<a href="images/382px-Leonardo_self.jpg" rel='lightbox' title="Leonardo Da Vinci">
+						<a href="#" rel='lightbox' title="Leonardo Da Vinci">
 							<img class="cloudcarousel img3" src="images/cloud03.jpg" width="200" height="330" alt="" />
 						</a> 
-						<a href="images/382px-Leonardo_self.jpg" rel='lightbox' title="Leonardo Da Vinci">
+						<a href="#" rel='lightbox' title="Leonardo Da Vinci">
 							<img class="cloudcarousel img4" src="images/cloud04.jpg" width="200" height="330" alt="" />
 						</a> 
-						<a href="images/382px-Leonardo_self.jpg" rel='lightbox' title="Leonardo Da Vinci">
+						<a href="#" rel='lightbox' title="Leonardo Da Vinci">
 							<img class="cloudcarousel img5" src="images/cloud05.jpg" width="200" height="330" alt="" />
 						</a> 
-						<a href="images/382px-Leonardo_self.jpg" rel='lightbox' title="Leonardo Da Vinci">
+						<a href="#" rel='lightbox' title="Leonardo Da Vinci">
 							<img class="cloudcarousel img6" src="images/cloud06.jpg" width="200" height="330" alt="" />
 						</a> 
-						<a href="images/382px-Leonardo_self.jpg" rel='lightbox' title="Leonardo Da Vinci">
+						<a href="#" rel='lightbox' title="Leonardo Da Vinci">
 							<img class="cloudcarousel img7" src="images/cloud07.jpg" width="200" height="330" alt="" />
 						</a>   
 					</div>
@@ -84,22 +84,22 @@
 			<a href="">隐私条款</a>
 			<a href="">法律声明</a>
 			<a href="">团长申请流程</a>
-			<span>QQ群: 78657100</span>
-			<span>QQ客服: 8120995</span>
+			<a href="">QQ群: 78657100</a>
+			<a href="">QQ客服: 8120995</a>
 		</div>
 		<script src="js/jquery1.8.3.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/cloud-carousel.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			$("#da-vinci-carousel").CloudCarousel( { 
-				reflHeight: 56,
+				reflHeight: 40,
 				reflGap:2,
 				yRadius:40,
 				xPos: 285,
 				yPos: 120,
 				speed:0.15,
+				autoRotateDelay: 2500,
 				autoRotate:"yes"
 			});
-
 		</script>
 	</body>
 </html>
