--- a/shurenhao/index.html
+++ b/shurenhao/index.html
@@ -491,7 +491,7 @@
                 </div>
             </div>
             <!-- 添加 -->
-            <ul class="article-list" id="foo1">
+            <ul class="article-list" id="foo">
                 <li class="article-list-item">
                     <div class="add-article-box">
                         <a href="javascript:;" class="open-popup" data-target="#article-pop"><i class="iconfont icon-jiahao3 green"></i>添加</a>
@@ -501,7 +501,7 @@
                             <img src="./image/article-img.png" alt="">
                         </div>
                         <div class="article-text">
-                            <p class="article-title">这是一条很长很长很长很长的文章标题</p>
+                            <p class="article-title">1这是一条很长很长很长很长的文章标题</p>
                             <div class="article-action">
                                 <i class="iconfont icon-delete"></i>
                                 <i class="iconfont icon-tuozhuai tuozhuai-btn"></i>
@@ -518,7 +518,7 @@
                             <img src="./image/article-img.png" alt="">
                         </div>
                         <div class="article-text">
-                            <p class="article-title">这是一条很长很长很长很长的文章标题</p>
+                            <p class="article-title">2这是一条很长很长很长很长的文章标题</p>
                             <div class="article-action">
                                 <i class="iconfont icon-delete"></i>
                                 <i class="iconfont icon-tuozhuai tuozhuai-btn"></i>
@@ -535,7 +535,170 @@
                             <img src="./image/article-img.png" alt="">
                         </div>
                         <div class="article-text">
-                            <p class="article-title">这是一条很长很长很长很长的文章标题</p>
+                            <p class="article-title">3这是一条很长很长很长很长的文章标题</p>
+                            <div class="article-action">
+                                <i class="iconfont icon-delete"></i>
+                                <i class="iconfont icon-tuozhuai tuozhuai-btn"></i>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+				<li class="article-list-item">
+                    <div class="add-article-box">
+                        <a href="javascript:;"><i class="iconfont icon-jiahao3 green"></i>添加</a>
+                    </div>
+                    <div class="article-item">
+                        <div class="article-img">
+                            <img src="./image/article-img.png" alt="">
+                        </div>
+                        <div class="article-text">
+                            <p class="article-title">4这是一条很长很长很长很长的文章标题</p>
+                            <div class="article-action">
+                                <i class="iconfont icon-delete"></i>
+                                <i class="iconfont icon-tuozhuai tuozhuai-btn"></i>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+				<li class="article-list-item">
+                    <div class="add-article-box">
+                        <a href="javascript:;"><i class="iconfont icon-jiahao3 green"></i>添加</a>
+                    </div>
+                    <div class="article-item">
+                        <div class="article-img">
+                            <img src="./image/article-img.png" alt="">
+                        </div>
+                        <div class="article-text">
+                            <p class="article-title">5这是一条很长很长很长很长的文章标题</p>
+                            <div class="article-action">
+                                <i class="iconfont icon-delete"></i>
+                                <i class="iconfont icon-tuozhuai tuozhuai-btn"></i>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+				<li class="article-list-item">
+                    <div class="add-article-box">
+                        <a href="javascript:;"><i class="iconfont icon-jiahao3 green"></i>添加</a>
+                    </div>
+                    <div class="article-item">
+                        <div class="article-img">
+                            <img src="./image/article-img.png" alt="">
+                        </div>
+                        <div class="article-text">
+                            <p class="article-title">6这是一条很长很长很长很长的文章标题</p>
+                            <div class="article-action">
+                                <i class="iconfont icon-delete"></i>
+                                <i class="iconfont icon-tuozhuai tuozhuai-btn"></i>
+                            </div>
+                        </div>
+                    </div>
+                </li><li class="article-list-item">
+                    <div class="add-article-box">
+                        <a href="javascript:;"><i class="iconfont icon-jiahao3 green"></i>添加</a>
+                    </div>
+                    <div class="article-item">
+                        <div class="article-img">
+                            <img src="./image/article-img.png" alt="">
+                        </div>
+                        <div class="article-text">
+                            <p class="article-title">7这是一条很长很长很长很长的文章标题</p>
+                            <div class="article-action">
+                                <i class="iconfont icon-delete"></i>
+                                <i class="iconfont icon-tuozhuai tuozhuai-btn"></i>
+                            </div>
+                        </div>
+                    </div>
+                </li><li class="article-list-item">
+                    <div class="add-article-box">
+                        <a href="javascript:;"><i class="iconfont icon-jiahao3 green"></i>添加</a>
+                    </div>
+                    <div class="article-item">
+                        <div class="article-img">
+                            <img src="./image/article-img.png" alt="">
+                        </div>
+                        <div class="article-text">
+                            <p class="article-title">8这是一条很长很长很长很长的文章标题</p>
+                            <div class="article-action">
+                                <i class="iconfont icon-delete"></i>
+                                <i class="iconfont icon-tuozhuai tuozhuai-btn"></i>
+                            </div>
+                        </div>
+                    </div>
+                </li><li class="article-list-item">
+                    <div class="add-article-box">
+                        <a href="javascript:;"><i class="iconfont icon-jiahao3 green"></i>添加</a>
+                    </div>
+                    <div class="article-item">
+                        <div class="article-img">
+                            <img src="./image/article-img.png" alt="">
+                        </div>
+                        <div class="article-text">
+                            <p class="article-title">9这是一条很长很长很长很长的文章标题</p>
+                            <div class="article-action">
+                                <i class="iconfont icon-delete"></i>
+                                <i class="iconfont icon-tuozhuai tuozhuai-btn"></i>
+                            </div>
+                        </div>
+                    </div>
+                </li><li class="article-list-item">
+                    <div class="add-article-box">
+                        <a href="javascript:;"><i class="iconfont icon-jiahao3 green"></i>添加</a>
+                    </div>
+                    <div class="article-item">
+                        <div class="article-img">
+                            <img src="./image/article-img.png" alt="">
+                        </div>
+                        <div class="article-text">
+                            <p class="article-title">10这是一条很长很长很长很长的文章标题</p>
+                            <div class="article-action">
+                                <i class="iconfont icon-delete"></i>
+                                <i class="iconfont icon-tuozhuai tuozhuai-btn"></i>
+                            </div>
+                        </div>
+                    </div>
+                </li><li class="article-list-item">
+                    <div class="add-article-box">
+                        <a href="javascript:;"><i class="iconfont icon-jiahao3 green"></i>添加</a>
+                    </div>
+                    <div class="article-item">
+                        <div class="article-img">
+                            <img src="./image/article-img.png" alt="">
+                        </div>
+                        <div class="article-text">
+                            <p class="article-title">11这是一条很长很长很长很长的文章标题</p>
+                            <div class="article-action">
+                                <i class="iconfont icon-delete"></i>
+                                <i class="iconfont icon-tuozhuai tuozhuai-btn"></i>
+                            </div>
+                        </div>
+                    </div>
+                </li><li class="article-list-item">
+                    <div class="add-article-box">
+                        <a href="javascript:;"><i class="iconfont icon-jiahao3 green"></i>添加</a>
+                    </div>
+                    <div class="article-item">
+                        <div class="article-img">
+                            <img src="./image/article-img.png" alt="">
+                        </div>
+                        <div class="article-text">
+                            <p class="article-title">12这是一条很长很长很长很长的文章标题</p>
+                            <div class="article-action">
+                                <i class="iconfont icon-delete"></i>
+                                <i class="iconfont icon-tuozhuai tuozhuai-btn"></i>
+                            </div>
+                        </div>
+                    </div>
+                </li><li class="article-list-item">
+                    <div class="add-article-box">
+                        <a href="javascript:;"><i class="iconfont icon-jiahao3 green"></i>添加</a>
+                    </div>
+                    <div class="article-item">
+                        <div class="article-img">
+                            <img src="./image/article-img.png" alt="">
+                        </div>
+                        <div class="article-text">
+                            <p class="article-title">13这是一条很长很长很长很长的文章标题</p>
                             <div class="article-action">
                                 <i class="iconfont icon-delete"></i>
                                 <i class="iconfont icon-tuozhuai tuozhuai-btn"></i>
@@ -725,8 +888,8 @@
     <script src="./plugin/jquery-weui/fastclick.js"></script>
     <script src="./js/common.js"></script>
     <!-- 拖拽插件 -->
-	<!-- <script src="./plugin/Js-Jquery-master/Sortable.js"></script>
-    <script src="./plugin/Js-Jquery-master/app.js"></script> -->
+	<script src="./plugin/Js-Jquery-master/Sortable.js"></script>
+    <script src="./plugin/Js-Jquery-master/app.js"></script>
     <script src="./plugin/zepto.js"></script>
     <script>
         $(function() {
