--- a/kadian/index.html
+++ b/kadian/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
     <title>kadian</title>
+    <link rel="stylesheet" type="text/css" href="static/common.css"/>
     <script src="./static/js/adaptation.js" type="text/javascript" charset="utf-8"></script>
   </head>
   <body>
