修改企业信息文件

--- a/jkq/index.html
+++ b/jkq/index.html
@@ -2478,7 +2478,9 @@
    
     <script src="./js/jquery1.42.min.js"></script>
     <script src="./js/jquery.SuperSlide.2.1.1.js"></script>
+	<script src="js/company.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript">
+		console.log(companyInfo);
             // 幸福经开
              // 首页底部新添   tabber
              $(function(){
